# CppGraphics

./: .gitignore  CMakeLists.txt  cppgraphics.cbp  cppgraphics.layout
src/: main.cpp
